[package]
name = "curvine-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orpc = { workspace = true }
curvine-common = { workspace = true }
curvine-client = { workspace = true }
curvine-ufs = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
num-bigint = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false}
