[package]
name = "curvine-client"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orpc = { workspace = true }
curvine-common = { workspace = true }
curvine-ufs = { workspace = true }
once_cell = { workspace = true }
hyper = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
fxhash = { workspace = true }
trait-variant = { workspace = true }
opendal = { workspace = true }