[package]
name = "curvine-client"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orpc = { workspace = true }
curvine-common = { workspace = true }
curvine-ufs = { workspace = true, optional = true }
once_cell = { workspace = true }
hyper = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
fxhash = { workspace = true }
prometheus = { workspace = true }

[features]
default = ["s3"]

s3 = ["dep:curvine-ufs", "curvine-ufs/s3"]

opendal = ["dep:curvine-ufs", "curvine-ufs/opendal"]
opendal-s3 = ["opendal", "curvine-ufs/opendal-s3"]
opendal-oss = ["opendal", "curvine-ufs/opendal-oss"]
opendal-gcs = ["opendal", "curvine-ufs/opendal-gcs"]
opendal-azblob = ["opendal", "curvine-ufs/opendal-azblob"]
opendal-cos = ["opendal", "curvine-ufs/opendal-cos"]
opendal-hdfs = ["opendal", "curvine-ufs/opendal-hdfs"]
opendal-webhdfs = ["opendal", "curvine-ufs/opendal-webhdfs"]
