[package]
name = "curvine-libsdk"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']
name = "curvine_libsdk"

[dependencies]
orpc = { workspace = true }
curvine-client = { workspace = true }
curvine-common = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
futures =  { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
dashmap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
jni = "0.21.1"

[build-dependencies]
cc = "1.1.7"
