[package]
name = "curvine-libsdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ['cdylib']
name = "curvine_libsdk"

[dependencies]
orpc = { workspace = true }
curvine-client = { workspace = true }
curvine-common = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
futures =  { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
dashmap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
jni = "0.21.1"
pyo3 = { version = "0.25.1", features = ["extension-module","abi3-py38","num-complex"] }

[build-dependencies]
cc = "1.1.7"
