[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "curvine_libsdk"
features = ["pyo3/extension-module"]
# include = [{ path = "src/python/**", format = "sdist"}]

[project]
name = "curvine_libsdk"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
