[package]
name = "curvine-shuffle"
version = "0.1.0"
edition = "2021"

[dependencies]
orpc = { workspace = true }
tokio = { workspace = true }
curvine-common = { workspace = true }
curvine-server = { workspace = true }
curvine-client = { workspace = true }
curvine-web = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
num_enum = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
bitvec = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[features]
default = ["server", "client"]
server = []
client = []
