[package]
name = "curvine-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orpc = { workspace = true }
curvine-common = { workspace = true }
curvine-server = { workspace = true }
curvine-client = { workspace = true }
curvine-fuse = { workspace = true }
curvine-ufs = { workspace = true }
tokio  = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
