[package]
name = "curvine-ufs"
version = "0.1.0"
edition = "2021"

[dependencies]
orpc = { workspace = true }
tokio = { workspace = true }
curvine-common = { workspace = true }
serde = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
aws-types = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
fastrand = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true}
trait-variant = { workspace = true }