[package]
name = "curvine-ufs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orpc = { workspace = true }
curvine-common = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
fastrand = { workspace = true }

aws-config = { version = "1.8.5", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "rustls",
], optional = true }

aws-sdk-s3 = { version = "1.103.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "rustls",
], optional = true }

aws-smithy-types = { version = "1.3.2", default-features = false, features = [
    "hyper-0-14-x"
], optional = true }

aws-credential-types = { version = "1.2.5", default-features = false, features = [
    "hardcoded-credentials",
], optional = true}

aws-types = { version = "1.3.8", optional = true}

opendal = { version = "0.54", default-features = false, optional = true }


[features]
# Storage backend implementations
## AWS native implementation using AWS SDK
s3 = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-smithy-types",
    "dep:aws-credential-types",
    "dep:aws-types"
]

## OpenDAL implementations for various storage services
opendal = ["dep:opendal"]
opendal-s3 = ["opendal", "opendal/services-s3"]        # Amazon S3
opendal-oss = ["opendal", "opendal/services-oss"]      # Alibaba Cloud OSS
opendal-cos = ["opendal", "opendal/services-cos"]      # Tencent Cloud COS
opendal-azblob = ["opendal", "opendal/services-azblob"] # Azure Blob Storage
opendal-gcs = ["opendal", "opendal/services-gcs"]      # Google Cloud Storage