[package]
name = "curvine-web"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curvine-client = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
curvine-common = { workspace = true }
orpc = { workspace = true }
log = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "fs"] }
serde_json = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }
